--- a/views/roomlisting.handlebars
+++ b/views/roomlisting.handlebars
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-  <h1 class="roomListingTitle">Our Rooms</h1>  
+  <h1 class="roomListingTitle">Featured Rooms</h1>  
    <div id="rooms">
                
                 
