--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,26 +14,26 @@
 
 
   <header>
-
+    
     <div class="nav">
       <ul class="nav_bar">
+        <li><img src="images/logo1.png" alt="" class="logo"></li>
         <li><a href="/">Home</a></li>
         <li><a href="/room-listing">Room Listing</a></li>
-
-
-      </ul>
-
-
-      <ul class="side_links">
         <li><a href="#" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</a>
         </li>
         <li><a href="#" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Register</a>
         </li>
+
       </ul>
+
+
+     
 
     </div>
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <img src="images/logo1.png" alt="" class="logo" style="margin-left:2em">
       <a href="/">Home</a>
       <a href="/room-listing">Room Listing</a>
       <a href="#" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</a>
