--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,4 @@
-/*body
-{
-    background:pink;
-}*/
+
 *
 {
     margin:0;
@@ -77,7 +74,7 @@ input[type=text], input[type=password] {
     box-sizing: border-box;
   }
   
-  /* Set a style for all buttons */
+  
   button {
     background-color: #ff5a60;
     color: white;
@@ -92,14 +89,14 @@ input[type=text], input[type=password] {
     opacity: 0.8;
   }
   
-  /* Extra styles for the cancel button */
+  
   .cancelbtn {
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
   }
   
-  /* Center the image and position the close button */
+  
   .imgcontainer {
     text-align: center;
     margin: 24px 0 12px 0;
@@ -133,30 +130,30 @@ input[type=text], input[type=password] {
     padding-top: 16px;
   }
   
-  /* The Modal (background) */
+ 
   .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
     padding-top: 60px;
   }
   
-  /* Modal Content/Box */
+  /*------------ Modal Box ------------------*/
   .modal-content {
     background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    margin: 5% auto 15% auto; 
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%;
   }
   
-  /* The Close Button (x) */
+  /*------------------- The Close Button (x)------------------ */
   .close {
     position: absolute;
     right: 25px;
@@ -172,7 +169,7 @@ input[type=text], input[type=password] {
     cursor: pointer;
   }
   
-  /* Add Zoom Animation */
+  /*------------------ Add Zoom Animation-------------------- */
   .animate {
     -webkit-animation: animatezoom 0.6s;
     animation: animatezoom 0.6s
@@ -289,8 +286,8 @@ input[type=text], input[type=password] {
 .info_section >p{
     margin-top: 0.5em;
     font-size: 2em;
-text-align: center;
-font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .video
 {
@@ -544,9 +541,25 @@ list-style: none;
   
 
 
-/* Change styles for span and cancel button on extra small screens */
+
  
- @media screen and (max-width: 1443px) {
+@media screen and (max-width: 1448px) {
+    .form
+    {
+        position: absolute;
+        top: 55%;
+        left: 20%;
+    }    
+    .headings
+{
+    position: absolute;
+    top: 35%;
+    left: 40%;
+    transform: scale(0.8,0.8);
+}
+}
+
+@media screen and (max-width: 1443px) {
    
     #rooms
     {
@@ -607,7 +620,7 @@ list-style: none;
     .headings
     {
         position: absolute;
-        top: 9%;
+        top: 10%;
         left: 40%;
         transform: scale(0.7,0.7);
     }
