--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -82,6 +82,10 @@
         <div id="exp">
 
         </div>
+        <p>Our Featured Rooms</p>
+        <div id="featured_rooms">
+
+        </div>
 
 
     </div>
@@ -92,6 +96,7 @@
     
     
     
- <script src="js/exp.js"></script>   
+ <script src="js/exp.js"></script>
+ <script src="js/feature_rooms.js"></script>   
 </body>
 </html>
