--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -21,6 +21,8 @@
 
           <input type="password" placeholder="Create a password" name="password">
 
+          <input type="text" placeholder="Enter your mobile number" name="mobile">
+
           <label for="psw"><b>Birthday</b></label>
           <p>To sign up, you need to be at least 18. Other people who use Airbnb won’t see your birthday.</p>
           <input type="date" id="bday">
