models and controllers

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://kit.fontawesome.com/fb194b5c23.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <title>{{title}}</title>
 </head>
 
@@ -17,9 +17,9 @@
     
     <div class="nav">
       <ul class="nav_bar">
-        <li><img src="images/logo1.png" alt="" class="logo"></li>
+        <li><img src="/images/logo1.png" alt="" class="logo"></li>
         <li><a href="/">Home</a></li>
-        <li><a href="/room-listing">Room Listing</a></li>
+        <li><a href="/room-listing/list">Room Listing</a></li>
         {{!-- <li><a href="#" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</a>
         </li>
         <li><a href="#" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Register</a>
@@ -34,9 +34,9 @@
     </div>
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <img src="images/logo1.png" alt="" class="logo" style="margin-left:2em">
+      <img src="/images/logo1.png" alt="" class="logo" style="margin-left:2em">
       <a href="/">Home</a>
-      <a href="/room-listing">Room Listing</a>
+      <a href="/room-listing/list">Room Listing</a>
       <a href="#" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</a>
       <a href="#" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Register</a>
     </div>
@@ -181,7 +181,7 @@
 
   </footer>
 
-  <script src="js/exp.js"></script>
+  <script src="/js/exp.js"></script>
 </body>
 
 </html>
