--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
     <div class="errors">{{this}}</div>
 
 {{/each}}
-    <form method="POST" action="/login">
+    <form method="POST" action="/login/log">
       <div class="container">
       <label for="uname"><b>Username</b></label>
       <input type="text" placeholder="Enter Username" name="uname" >
