--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,7 +6,7 @@
 {{/each}}
 
 
-      <form method="POST" action="/signup">
+      <form method="POST" action="/signup/sign">
        
 
         <div class="container">
