--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -80,11 +80,33 @@
         </div>
         <p>Top Rated Experiences</p>
         <div id="exp">
+            {{#each exps}}
 
+            <article class="exp">
+    <img src="http://localhost:3000/{{this.image}}" alt="" id="expImage"> 
+    <p id="expTitle">{{this.name}}</p>
+    <p id="expDescription">{{this.place}}</p>
+    <p id="expPrice">*<strong>{{this.rating}}</strong>({{this.number_of_reviews}})</p></strong> 
+    
+    </article>
+            
+            {{/each}}
         </div>
         <p>Our Featured Rooms</p>
         <div id="featured_rooms">
+        {{#each feature_rooms}}
 
+            <article class="room">
+                
+               <img src="http://localhost:3000/{{this.image}}" alt="" id="roomImage"> 
+                <p id="roomTitle">{{this.name}}</p>
+                <p id="roomDescription">{{this.guests}} guests - {{this.bedroom}} bedroom - {{this.number_of_beds}} bed - {{this.bathroom}} bathroom - {{this.kitchen}} - {{this.wifi}} - {{this.parking}}</p>
+                <p id="roomPrice">Price:<strong>{{this.price}}</strong> per night</p></strong>
+ 
+                
+            </article>
+            
+        {{/each}}
         </div>
 
 
@@ -97,6 +119,6 @@
     
     
  <script src="js/exp.js"></script>
- <script src="js/feature_rooms.js"></script>   
+   
 </body>
 </html>
