--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,8 +24,8 @@
         </li>
         <li><a href="#" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Register</a>
         </li> --}}
-        <li><a href="/login">Login</a></li>
-        <li><a href="/signup">Signup</a></li>
+        <li><a href="/login/log">Login</a></li>
+        <li><a href="/signup/sign">Signup</a></li>
       </ul>
 
 
@@ -37,8 +37,8 @@
       <img src="/images/logo1.png" alt="" class="logo" style="margin-left:2em">
       <a href="/">Home</a>
       <a href="/room-listing/list">Room Listing</a>
-      <a href="#" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</a>
-      <a href="#" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Register</a>
+      <a href="/login/log" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</a>
+      <a href="/signup/sign" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Register</a>
     </div>
 
     <span class="nl" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
