--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -11,19 +11,19 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="images/exp3.jpg" class="banner">
+  <img src="/images/exp3.jpg" class="banner">
   <div class="text">Experience the green</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="images/exp2.jpg" class="banner">
+  <img src="/images/exp2.jpg" class="banner">
   <div class="text">Try new Cuisines</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="images/exp4.jpg" class="banner">
+  <img src="/images/exp4.jpg" class="banner">
   <div class="text">Explore Niagra Region and Falls</div>
 </div>
 
