--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -25,7 +25,7 @@
 
           <label for="psw"><b>Birthday</b></label>
           <p>To sign up, you need to be at least 18. Other people who use Airbnb won’t see your birthday.</p>
-          <input type="date" id="bday">
+          <input type="date" id="bday" name="bday">
           <p>We’ll send you marketing promotions, special offers, inspiration, and policy updates via email.</p>
           <button type="submit">Signup</button>
           <label>
