--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,175 +12,14 @@
 
 <body>
 
-
-  <header>
-    
-    <div class="nav">
-      <ul class="nav_bar">
-        <li><img src="/images/logo1.png" alt="" class="logo"></li>
-        <li><a href="/">Home</a></li>
-        <li><a href="/room-listing/list">Room Listing</a></li>
-        {{!-- <li><a href="#" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</a>
-        </li>
-        <li><a href="#" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Register</a>
-        </li> --}}
-        <li><a href="/login/log">Login</a></li>
-        <li><a href="/signup/sign">Signup</a></li>
-      </ul>
-
-
-     
-
-    </div>
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <img src="/images/logo1.png" alt="" class="logo" style="margin-left:2em">
-      <a href="/">Home</a>
-      <a href="/room-listing/list">Room Listing</a>
-      <a href="/login/log" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</a>
-      <a href="/signup/sign" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Register</a>
-    </div>
-
-    <span class="nl" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-
-
-
-
-
-    <div id="id01" class="modal">
-
-      <form class="modal-content animate" name="myForm" onsubmit="return validateForm()" action="/welcome">
-    <div class="imgcontainer">
-      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-      
-    </div>
-
-    <div class="container">
-      <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" >
-      
-
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" id="psw">
-        
-      <button type="submit">Login</button>
-      <label>
-        <input type="checkbox" checked="checked" name="remember"> Remember me
-      </label>
-    </div>
-
-    <div class="container" style="background-color:#f1f1f1">
-      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-      <span class="psw">Forgot <a href="#">password?</a></span>
-    </div>
-  </form>
-    </div>
-
-    <div id="id02" class="modal">
-
-      <form class="modal-content animate" action="/welcome">
-        <div class="imgcontainer">
-          <span onclick="document.getElementById('id02').style.display='none'" class="close"
-            title="Close Modal">&times;</span>
-
-        </div>
-
-        <div class="container">
-          <p id="signup_links">Sign up with <a href="http://www.facebook.com">Facebook</a> or <a
-              href="http://www.gmail.com">Google</a></p>
-          <p id="or">or</p>
-          <input type="text" placeholder="Email address" name="email" required>
-
-          <input type="text" placeholder="First name" name="first_name" required>
-
-          <input type="text" placeholder="Last name" name="last_name" required>
-
-          <input type="password" placeholder="Create a password" name="password" required>
-
-          <label for="psw"><b>Birthday</b></label>
-          <p>To sign up, you need to be at least 18. Other people who use Airbnb won’t see your birthday.</p>
-          <input type="date" id="bday">
-          <p>We’ll send you marketing promotions, special offers, inspiration, and policy updates via email.</p>
-          <button type="submit">Signup</button>
-          <label>
-            <input type="checkbox" checked="checked" name="remember"> Remember me
-          </label>
-        </div>
-
-        <div class="container" style="background-color:#f1f1f1">
-          <button type="button" onclick="document.getElementById('id02').style.display='none'"
-            class="cancelbtn">Cancel</button>
-          <span class="psw">Forgot <a href="#">password?</a></span>
-        </div>
-      </form>
-    </div>
-
-
-
-
-
-  </header>
-
+  {{> header}}
+  
   <main>
     {{{body}}}
 
   </main>
-  <footer>
-
-    <div class="container">
-      <div class="policy">
-        <ul>
-          <li><strong><a href="#">Airbnb</a></strong></li>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Policies</a></li>
-          <li><a href="#">Accessibility</a></li>
-        </ul>
-      </div>
-      <div class="company">
-        <ul>
-          <li><strong><a href="#">Discover</a></strong></li>
-          <li><a href="#">Trust & Safety</a></li>
-          <li><a href="#">Travel Credit</a></li>
-          <li><a href="#">Airbnb Citizen</a></li>
-          <li><a href="#">Airbnbmag</a></li>
-        </ul>
-      </div>
-      <div class="bussiness">
-        <ul>
-          <li><strong><a href="#">Hosting</a></strong></li>
-          <li><a href="#">Responsible Hosting</a></li>
-          <li><a href="#">Community Center</a></li>
-          <li><a href="#">Host an Experience</a></li>
-          <li><a href="#">Open Homes</a></li>
-        </ul>
-      </div>
-      <div class="help">
-        <ul>
-          <li><strong><a href="#">Need Help?</a></strong></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Contact us</a></li>
-          <li><a href="#">Neighbourhood Support</a></li>
-          <li><a href="#">Customer Service</a></li>
-        </ul>
-      </div>
-      <div class="social_links">
-        <ul>
-          <li><strong>
-              <p>SOCIAL LINKS</p>
-            </strong></li>
-          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-        </ul>
-
-      </div>
-    </div>
-
-
-  </footer>
-
+  {{> footer}}
+  
   <script src="/js/exp.js"></script>
 </body>
 
