--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="welcome_heading">Welcome Prabhjot. Make yourself home at one of our rooms and explore the surroundings.</h1>
+    <h1 class="welcome_heading">Welcome {{user.first_name}} {{user.last_name}} . Make yourself home at one of our rooms and explore the surroundings.</h1>
     <div class="slideshow-container">
 
 <div class="mySlides fade">
