--- a/public/css/style.css
+++ b/public/css/style.css
@@ -505,11 +505,12 @@ input[type=text], input[type=password] {
     resize:horizontal;
     object-fit: contain;
 }
-.room  {
+.room 
+ {
     
     background-color: #fff;
    
-    padding-bottom:1em;
+    padding-bottom:2em;
 
     overflow: hidden;
     box-shadow: 0 0 1em rgba(0,0,0,0.4);
@@ -537,8 +538,41 @@ input[type=text], input[type=password] {
   {
      
      width:100%;
-     height:20em;
+     height:15em;
       
+  }
+  #roomLocation
+  {
+      margin-bottom: 0.5em;
+  }
+  #locationSelector
+  {
+    margin-left: 3.5em;
+  }
+  .update{
+    text-decoration: none;
+    background: black;
+    padding: 0.5em;
+    background: #ff5a60;
+    color: white;
+    border-radius: 1em;
+    margin-top:2em;
+    
+    
+
+  }
+  .delete{
+    text-decoration: none;
+    background: black;
+    padding: 0.5em;
+    background: #ff5a60;
+    color: white;
+    border-radius: 1em;
+    
+
+  }
+  .searchForm{
+      margin-left: 3em;
   }
   
 
@@ -680,6 +714,28 @@ list-style: none;
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
+  }
+
+  .admin_title
+  {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: 1.5em;
+  }
+  .admin_op
+  {
+  
+    list-style: none;
+    margin-left:3em;
+  }
+  .admin_op> li >a
+  {
+    text-decoration: none;
+    background: black;
+    padding: 0.5em;
+    background: #ff5a60;
+    color: white;
+    border-radius: 1em;
   }
   
 
