--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -17,7 +17,9 @@
                 
         
         {{#if user }}
+        <li><a href="/login/brooms">Booked Rooms</a></li>
           <li><a href="/login/out">Logout</a></li>
+          
 
         {{else}}
           <li><a href="/login/log">Login</a></li>
