--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -16,7 +16,7 @@
 {{#each data}}
     
 <article class="room">
-        <img src="./images/{{this.roomimage}}" alt="" id="roomImage"> 
+        <img src="../images/{{this.roomimage}}" alt="" id="roomImage"> 
         <p id="roomTitle">{{this.title}}</p>
         <p id="roomDescription">{{this.description}} </p>
         <p id="roomPrice">Price:<strong>{{this.price}}</strong> per night</p></strong>
