--- a/views/roomlisting.handlebars
+++ b/views/roomlisting.handlebars
@@ -24,7 +24,7 @@
 {{#each data}}
     
 <article class="room">
-        <img src="/uploads/{{this.roomimage}}" alt="" id="roomImage"> 
+        <img src="../uploads/{{this.roomimage}}" alt="" id="roomImage"> 
         <p id="roomTitle">{{this.title}}</p>
         <p id="roomDescription">{{this.description}} </p>
         <p id="roomPrice">Price:<strong>{{this.price}}</strong> per night</p></strong>
