--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -83,7 +83,7 @@
             {{#each data1}}
 
             <article class="exp">
-    <img src="../images/{{this.image}}" alt="" id="expImage"> 
+    <img src="../images/{{this.image}}" alt="" id="expImage">{{this.image}} 
     <p id="expTitle">{{this.name}}</p>
     <p id="expDescription">{{this.place}}</p>
     <p id="expPrice">*<strong>{{this.rating}}</strong>({{this.number_of_reviews}})</p></strong> 
