--- a/views/roomdescription.handlebars
+++ b/views/roomdescription.handlebars
@@ -25,7 +25,7 @@
             <input type="date" id="bday" name="to">
 
           <input type="hidden" name="roomimage" value="{{this.roomimage}}">
-          <img src="../uploads/{{this.roomimage}}" alt="" id="roomImage">
+          <img src="/uploads/{{this.roomimage}}" alt="" id="roomImage">
           <button type="submit">Book Room</button>
           
         </div>
